# jhs-sys

./: .gitignore  README.md  app_client.py  gui_launcher.py  gunicorn.conf.py  manage.bat  new_main.py  pyinstaller.txt  pyproject.toml  server_connect.py  write_mysql.py  wsgi.py
static/css/: base.css  zhidongli.css
static/report/: line.html
templates/: 2024-01-02.html  5s.html  LSMqueryMaterial.html  base.html  fengzhenchang.html  fengzhenchang_copy.html  index.html  jinLiPrint.html  jiuMaoPrint.html  nav.html  qianJi.html  queryMaterial.html  query_seorder.html  tongtaiying.html  translate.html  yunHaiPrint.html  zhidongli.html
