[project]
name = "jhssystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-bootstrap>=3.3.7.1",
    "flask-bootstrap5>=0.1.dev1",
    "pandas>=2.3.1",
    "pyodbc>=5.2.0",
    "waitress>=3.0.2",
]
